--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "mongoose": "^4.13.1",
+    "morgan": "^1.9.0",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
   },
